# beats-bench

./: .gitignore  AGENTS.md  DEVELOPING.md  README.md  index.html  pyproject.toml  run.html
.github/: copilot-instructions.md
.github/workflows/: bench.yml  ci.yml  deploy-dashboard.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: api.ts  app.tsx  env.d.ts  index.css  main.tsx  router.ts  style.css  types.ts  utils.ts
dashboard/src/components/: ChartSetup.ts  EPSBarChart.tsx  SparklineChart.tsx  TimeSeriesChart.tsx
dashboard/src/pages/: Overview.tsx  RunDetail.tsx
data/: index.json
data/badges/: value.json
data/index/: metrics.json  refs.json
data/runs/: 23759440646.json  23760935157.json  23762168203.json  23783601959.json  23835247247.json  23887055438.json  23936456775.json  23973036105.json  23995857841.json
data/runs/24523559385-1--publish/: benchmark.otlp.json
data/runs/24523560674-1--publish/: benchmark.otlp.json
data/runs/24523562129-1--publish/: benchmark.otlp.json
data/runs/24551388958-1--publish/: benchmark.otlp.json
data/runs/24598740281-1--publish/: benchmark.otlp.json
data/runs/24622844242-1--publish/: benchmark.otlp.json
data/series/: value.json
log-generator/: go.mod  main.go
mock-es/: go.mod  main.go
pipelines/: enrichment-only.yml  filestream-dissect.yml  full-agent-dissect.yml  full-agent-rename-only.yml  passthrough.yml  scenarios.json  tcp-cef-rename.yml  tcp-syslog-dissect.yml  udp-syslog-dissect.yml
scripts/: build.sh  collect-profiles.sh  local-run.sh  run-one.sh  run-scenario.sh  summarize.py
src/beats_bench/: __init__.py  benchmark.py  cli.py  docker.py  profiler.py  runner.py  scenario.py  stats.py  summarize.py
tests/: conftest.py  test_benchmark.py  test_runner.py  test_stats.py  test_summarize.py
(+70 files in other folders)
