[project]
name = "beats-bench"
version = "0.1.0"
description = "Filebeat pipeline benchmarking toolkit"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
beats-bench = "beats_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beats_bench"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PT",    # flake8-pytest-style
    "ARG",   # flake8-unused-arguments
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "PERF",  # perflint
    "FBT",   # flake8-boolean-trap
    "T20",   # flake8-print (no print in library code)
]
ignore = [
    "T201",    # allow print in CLI code
    "PLR0913", # allow many arguments (CLI/runner functions need them)
    "PLR0912", # allow many branches in result-loading functions
    "PLR0915", # allow many statements in summary/scenario functions
    "PLC0415", # allow lazy imports for CLI startup performance
    "ERA001",  # allow descriptive comments that look like code
    "PLR2004", # allow magic values in comparisons (HTTP 200 etc)
    "SIM105",  # allow explicit try/except over contextlib.suppress
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "FBT"]

[tool.ty]
python-version = "3.11"
